--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div previous-operand class="previous-operand"></div>
       <div current-operand class="current-operand"></div>
     </div>
-    <button all-clear >CE</button>
-    <button delete>C</button>
+    <button all-clear >C</button>
+    <button delete>CE</button>
     <button operation-sqrt>&#8730</button>
     <button operation>/</button>
     <button number>7</button>
